--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <div class="app">
     <header class="header">
       <div class="brand">
-        <!-- same place where globe was -->
         <div class="appIconWrap">
           <img class="appIcon" src="dps-logo.jpg" alt="DPS Tajcity logo" />
         </div>
@@ -89,7 +88,8 @@
         </div>
 
         <div class="insights">
-          <h3>Agra next steps (what to do, what to avoid, and what to do next)</h3>
+          <!-- ✅ UPDATED heading: remove “Agra” -->
+          <h3>Next steps (what to do, what to avoid, and what to do next)</h3>
           <div id="recommendations" class="recText"></div>
         </div>
 
@@ -112,6 +112,6 @@
     </main>
   </div>
 
-  <script src="app.js?v=2" defer></script>
+  <script src="app.js?v=3" defer></script>
 </body>
 </html>
