--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
         </div>
 
         <div class="insights">
-          <!-- ✅ UPDATED heading: remove “Agra” -->
           <h3>Next steps (what to do, what to avoid, and what to do next)</h3>
           <div id="recommendations" class="recText"></div>
         </div>
 
+        <!-- ✅ ONLY TWO BUTTONS NOW -->
         <div class="actions">
           <button class="btn ghost" id="btnRestart">Restart</button>
           <button class="btn ghost" id="btnRefreshLB">Refresh Leaderboard</button>
@@ -111,6 +111,6 @@
     </main>
   </div>
 
-  <script src="app.js?v=3" defer></script>
+  <script src="app.js?v=4" defer></script>
 </body>
 </html>
