--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
     </header>
 
     <main class="card">
+
       <!-- STEP 1 -->
       <section id="stepProfile">
         <h2>Parent Details</h2>
-        <p class="hint">Please fill details and answer 15 questions. Your score will appear only at the end.</p>
+        <p class="hint">
+          Please fill details and answer 15 questions. Your score will appear only at the end.
+          <span class="muted">Details are used only for the school survey record.</span>
+        </p>
 
         <div class="grid">
           <label>Parent Name
@@ -39,7 +43,7 @@
           <label class="full">Address
             <input id="address" type="text" placeholder="e.g., Tajganj, Agra" />
           </label>
-          <label>Child Class / Section
+          <label>Child Class / Section (format: 6-B)
             <input id="childClass" type="text" placeholder="e.g., 6-B" />
           </label>
         </div>
@@ -92,7 +96,7 @@
           <div id="recommendations" class="recText"></div>
         </div>
 
-        <!-- ✅ ONLY TWO BUTTONS NOW -->
+        <!-- Only two buttons -->
         <div class="actions">
           <button class="btn ghost" id="btnRestart">Restart</button>
           <button class="btn ghost" id="btnRefreshLB">Refresh Leaderboard</button>
@@ -111,6 +115,6 @@
     </main>
   </div>
 
-  <script src="app.js?v=4" defer></script>
+  <script src="app.js?v=9" defer></script>
 </body>
 </html>
