--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2>Parent Details</h2>
         <p class="hint">
           Please fill details and answer 15 questions. Your score will appear only at the end.
-          <span class="muted">Details are used only for the school survey record.</span>
+        <span class="muted"><i>(Details are used only for the school survey)</i></span>
         </p>
 
         <div class="grid">
