--- a/index.html
+++ b/index.html
@@ -4,107 +4,117 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>DPS Tajcity Agra • Family Carbon Footprint Check</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=final" />
 </head>
 <body>
+  <div class="bgGlow"></div>
 
-<div class="bgGlow"></div>
+  <div class="app">
+    <header class="header">
+      <div class="brand">
+        <div class="appIconWrap">
+          <img class="appIcon" src="dps-logo.jpg" alt="DPS Tajcity logo" />
+        </div>
 
-<div class="app">
-  <header class="header">
-    <div class="brand">
-      <div class="appIconWrap">
-        <img src="dps-logo.jpg" class="appIcon" alt="DPS Tajcity logo">
-      </div>
-      <div>
-        <h1>DPS Tajcity Agra • Family Carbon Footprint Check</h1>
-        <p class="sub">Parents edition • 15 questions • practical improvement plan</p>
-      </div>
-    </div>
-  </header>
-
-  <main class="card">
-
-    <!-- PROFILE -->
-    <section id="stepProfile">
-      <h2>Parent Details</h2>
-      <p class="hint">
-        Please fill details and answer 15 questions. Your score appears at the end.
-        <span class="muted"><i>(Details are used only for the school survey)</i></span>
-      </p>
-
-      <div class="grid">
-        <label>Parent Name
-          <input id="parentName" />
-        </label>
-        <label>Phone Number
-          <input id="phone" />
-        </label>
-        <label class="full">Address
-          <input id="address" />
-        </label>
-        <label>Child Class (e.g. 6-B)
-          <input id="childClass" />
-        </label>
-      </div>
-
-      <div class="row">
-        <button class="btn" id="btnStart">Start →</button>
-      </div>
-    </section>
-
-    <!-- QUIZ -->
-    <section id="stepQuiz" style="display:none">
-      <div class="toprow">
         <div>
-          <div class="pill" id="arenaPill"></div>
-          <div class="qtitle" id="qText"></div>
-          <div class="qsub" id="qSub"></div>
-        </div>
-        <div class="progress">
-          <div class="bar"><div class="fill" id="progFill"></div></div>
-          <div class="pct" id="progText"></div>
+          <h1>DPS Tajcity Agra • Family Carbon Footprint Check</h1>
+          <p class="sub">Parents edition • 15 questions • practical improvement plan</p>
         </div>
       </div>
+    </header>
 
-      <div class="options" id="options"></div>
+    <main class="card">
 
-      <div class="nav">
-        <button class="btn ghost" id="btnBack">← Back</button>
-        <button class="btn" id="btnNext" disabled>Next →</button>
-      </div>
-    </section>
+      <!-- STEP 1 -->
+      <section id="stepProfile">
+        <h2>Parent Details</h2>
+        <p class="hint">
+          Please fill details and answer 15 questions. Your score will appear only at the end.
+          <span class="muted"><i>(Details are used only for the school survey)</i></span>
+        </p>
 
-    <!-- RESULTS -->
-    <section id="stepResults" style="display:none">
-      <h2>Your Family Report</h2>
+        <div class="grid">
+          <label>Parent Name
+            <input id="parentName" type="text" placeholder="e.g., Rahul Sharma" autocomplete="name" />
+          </label>
 
-      <div class="scoreRow">
-        <div class="bigScore">
-          <div class="score" id="overallScore"></div>
-          <div class="badge" id="badgeText"></div>
-          <div class="small" id="whereYouAre"></div>
+          <label>Phone Number
+            <input id="phone" type="tel" placeholder="e.g., 98XXXXXXXX" autocomplete="tel" />
+          </label>
+
+          <label class="full">Address
+            <input id="address" type="text" placeholder="e.g., Tajganj, Agra" autocomplete="street-address" />
+          </label>
+
+          <label>Child Class / Section (format: 6-B)
+            <input id="childClass" type="text" placeholder="e.g., 6-B" />
+          </label>
         </div>
-        <div class="arenaScores" id="arenaScores"></div>
-      </div>
 
-      <div class="insights">
-        <h3>Next steps (what to do, what to avoid, and what to do next)</h3>
-        <div id="recommendations"></div>
-      </div>
+        <div class="row">
+          <button class="btn" id="btnStart" type="button">Start →</button>
+        </div>
+      </section>
 
-      <div class="actions">
-        <button class="btn ghost" id="btnRestart">Restart</button>
-        <button class="btn ghost" id="btnRefreshLB">Refresh Leaderboard</button>
-      </div>
+      <!-- STEP 2 -->
+      <section id="stepQuiz" style="display:none;">
+        <div class="toprow">
+          <div>
+            <div class="pill" id="arenaPill"></div>
+            <div class="qtitle" id="qText"></div>
+            <div class="qsub" id="qSub"></div>
+          </div>
 
-      <h3>🏆 Leaderboard</h3>
-      <div class="leaderboard" id="leaderboard"></div>
-    </section>
+          <div class="progress">
+            <div class="bar"><div class="fill" id="progFill"></div></div>
+            <div class="pct" id="progText"></div>
+          </div>
+        </div>
 
-  </main>
-</div>
+        <div class="options" id="options"></div>
 
-<script src="app.js" defer></script>
+        <div class="nav">
+          <button class="btn ghost" id="btnBack" type="button">← Back</button>
+          <button class="btn" id="btnNext" type="button" disabled>Next →</button>
+        </div>
+      </section>
+
+      <!-- STEP 3 -->
+      <section id="stepResults" style="display:none;">
+        <h2>Your Family Report</h2>
+
+        <div class="scoreRow">
+          <div class="bigScore">
+            <div class="score" id="overallScore">0</div>
+            <div class="badge" id="badgeText">—</div>
+            <div class="small" id="whereYouAre">—</div>
+          </div>
+
+          <div class="arenaScores" id="arenaScores"></div>
+        </div>
+
+        <div class="insights">
+          <h3>Next steps (what to do, what to avoid, and what to do next)</h3>
+          <div id="recommendations" class="recText"></div>
+        </div>
+
+        <!-- Only 2 buttons -->
+        <div class="actions">
+          <button class="btn ghost" id="btnRestart" type="button">Restart</button>
+          <button class="btn ghost" id="btnRefreshLB" type="button">Refresh Leaderboard</button>
+        </div>
+
+        <p class="status" id="submitStatus"></p>
+
+        <hr />
+
+        <h3>🏆 Leaderboard</h3>
+        <div class="leaderboard" id="leaderboard"></div>
+      </section>
+
+    </main>
+  </div>
+
+  <script src="app.js?v=final" defer></script>
 </body>
 </html>
