--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- =========================
-     index.html (FULL)
+     index.html (FULL) — adds CO₂ line + cache-bust v12
      ========================= -->
 <!doctype html>
 <html lang="en">
@@ -7,7 +7,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>DPS Tajcity Agra • Family Carbon Footprint Check</title>
-  <link rel="stylesheet" href="style.css?v=final" />
+  <link rel="stylesheet" href="style.css?v=v12" />
 </head>
 <body>
   <div class="bgGlow"></div>
@@ -32,7 +32,7 @@
       <section id="stepProfile">
         <h2>Parent Details</h2>
         <p class="hint">
-          Please fill details and answer 15 questions. Your score will appear only at the end.
+          Please fill details and answer 15 questions. Your report will appear only at the end.
           <span class="muted"><i>(Details are used only for the school survey)</i></span>
         </p>
 
@@ -74,7 +74,7 @@
           </div>
         </div>
 
-        <!-- ✅ now contains 3 questions (arena-wise) -->
+        <!-- ✅ arena-wise: 3 questions together -->
         <div class="options" id="options"></div>
 
         <div class="nav">
@@ -92,6 +92,9 @@
             <div class="score" id="overallScore">0</div>
             <div class="badge" id="badgeText">—</div>
             <div class="small" id="whereYouAre">—</div>
+
+            <!-- ✅ CO₂ estimate line -->
+            <div class="small" id="co2Line" style="margin-top:10px;opacity:.92"></div>
 
             <div class="small" style="margin-top:10px;opacity:.88">
               <b>Carbon Footprint Score (0–100)</b>: lower is better.
@@ -123,6 +126,6 @@
     </main>
   </div>
 
-  <script src="app.js?v=final" defer></script>
+  <script src="app.js?v=v12" defer></script>
 </body>
 </html>
