--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- =========================
-     index.html (FULL) — adds CO₂ line + cache-bust v12
+     index.html — FULL
      ========================= -->
 <!doctype html>
 <html lang="en">
@@ -18,7 +18,6 @@
         <div class="appIconWrap">
           <img class="appIcon" src="dps-logo.jpg" alt="DPS Tajcity logo" />
         </div>
-
         <div>
           <h1>DPS Tajcity Agra • Family Carbon Footprint Check</h1>
           <p class="sub">Parents edition • 15 questions • practical improvement plan</p>
@@ -74,7 +73,7 @@
           </div>
         </div>
 
-        <!-- ✅ arena-wise: 3 questions together -->
+        <!-- arena-wise: 3 questions together -->
         <div class="options" id="options"></div>
 
         <div class="nav">
@@ -93,7 +92,7 @@
             <div class="badge" id="badgeText">—</div>
             <div class="small" id="whereYouAre">—</div>
 
-            <!-- ✅ CO₂ estimate line -->
+            <!-- CO₂ estimate -->
             <div class="small" id="co2Line" style="margin-top:10px;opacity:.92"></div>
 
             <div class="small" style="margin-top:10px;opacity:.88">
