--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>DPS Tajcity Agra • Family Carbon Footprint Check</title>
-  <link rel="stylesheet" href="style.css?v=v15" />
+  <link rel="stylesheet" href="style.css?v=final" />
 </head>
 <body>
   <div class="bgGlow"></div>
@@ -15,6 +15,7 @@
         <div class="appIconWrap">
           <img class="appIcon" src="dps-logo.jpg" alt="DPS Tajcity logo" />
         </div>
+
         <div>
           <h1>DPS Tajcity Agra • Family Carbon Footprint Check</h1>
           <p class="sub">Parents edition • 15 questions • CO₂ estimate + improvement plan</p>
@@ -28,7 +29,7 @@
       <section id="stepProfile">
         <h2>Parent Details</h2>
         <p class="hint">
-          Please fill details and answer 15 questions. Your report will appear only at the end.
+          Please fill details and answer 15 questions.
           <span class="muted"><i>(Details are used only for the school survey)</i></span>
         </p>
 
@@ -46,7 +47,7 @@
           </label>
 
           <label>Child Class (1–12)
-            <input id="childClass" type="text" placeholder="e.g., 6" />
+            <input id="childClass" type="text" placeholder="e.g., 6" inputmode="numeric" />
           </label>
         </div>
 
@@ -87,16 +88,17 @@
             <div class="badge" id="badgeText">—</div>
             <div class="small" id="whereYouAre">—</div>
 
-            <div class="small" style="margin-top:10px;">
-              <b>Estimated total CO₂ footprint (family of 4)</b>
-              <div class="co2big" id="co2Total">—</div>
-              <div class="muted2">Approximate indicator based on habits (not a lab measurement).</div>
-            </div>
+            <div class="spacer"></div>
 
-            <div class="compareBox" style="margin-top:14px;">
+            <div class="kpiTitle">Estimated total CO₂ footprint (family of 4)</div>
+            <div class="kpiValue" id="co2Total">—</div>
+
+            <div class="miniNote">This is an approximate indicator based on habits (not a lab measurement).</div>
+
+            <div class="compareCard">
               <div class="compareTitle">Comparison (tCO₂e/year)</div>
+              <div class="compareSub">Fixed family size: 4</div>
               <div id="compareBars"></div>
-              <div class="muted2">Fixed family size: <b>4</b></div>
             </div>
           </div>
 
@@ -124,6 +126,6 @@
     </main>
   </div>
 
-  <script src="app.js?v=v15" defer></script>
+  <script src="app.js?v=final" defer></script>
 </body>
 </html>
